2007-11-19  Wade Berrier  <wberrier@novell.com>

	* Makefile.am: include windows.mak in EXTRA_DIST

2007-11-18  Andreia Gaita <avidigal@novell.com>

	* windows.mak: embed manifest file in a release build so windows 
	actually loads dependencies correctly

2007-11-09  Andreia Gaita <avidigal@novell.com>

	* BrowserWindow.cpp: Disable event calls on OnStateChange, it's unstable

2007-11-08  Andreia Gaita <avidigal@novell.com>

	* BrowserWindow.cpp: When loading, invoke events on the managed side
	so it can track progress and url changes.
	* gluezilla.h, Widget.h: remove unneeded events, fix parameters.
	* interfaces.h: add nsIURI interface, OnLocationChanged needs it
	* Widget.cpp: add StateChange and LocationChange implementations to
	call up to the managed side.

2007-11-06  Andreia Gaita <avidigal@novell.com>

	* windows.mak: windows makefile for command line building with nmake
	* gluezilla2k5.vcproj: add release configuration, finetune settings

2007-11-06  Andreia Gaita <avidigal@novell.com>

	* Disable debug messages when enable-optimize=yes (non-debug build)
	* gluezilla.*: add access to the WebNavigation object, for future 
			direct interface access

2007-11-05  Andreia Gaita <avidigal@novell.com>

	* LocationProvider.*, Widget.cpp: GRE_GetXPComPath() searches for a 
	runtime with a fixed version equal to the one it was built against,
	so only use it to search for a local runtime, and if it fails, use
	GRE_GetPathWithProperties() to get a runtime with a version >= 1.8,
	independently of whatever version it was initially built with.

2007-10-31  Andreia Gaita  <avidigal@novell.com>

	* gluezilla.*,Widget.h: Receive user data dir to store local data.
	* LocationProvider.cpp: Use the user data dir for component and xpti
	registry. Use the mozilla directories to load plugins and other shared
	mozilla things. No need to use local directories anymore.

2007-10-30  Andreia Gaita  <avidigal@novell.com>

	* gluezilla.*, Widget.*: add blur entry point to catch